--- a/staffpicks.html
+++ b/staffpicks.html
@@ -297,6 +297,7 @@
   <div class="card-overlay">
     <div class="overlay-content">
       If you like cyberpunk stuff and you like top-down shooters, it's pretty can't miss. Don't overthink the story; it's guns + gritty setting.
+      <p><strong>Why I like it:</strong> </p>
       <p class="steam-link">
         <a href="https://store.steampowered.com/app/464060/RUINER/" target="_blank" rel="noopener noreferrer">Check it out on Steam.</a>
       </p>
@@ -311,6 +312,7 @@
   <div class="card-overlay">
     <div class="overlay-content">
       Cyberpunk on a spacestation with a vibe as good as any. This is one of our all-time favorite pieces of cyberpunk media. The gameplay loop might not be for everyone, but the story and dialogue is as good as it gets.
+      <p><strong>Why I like it:</strong> </p>
       <p class="steam-link">
         <a href="https://store.steampowered.com/app/1578650/Citizen_Sleeper/" target="_blank" rel="noopener noreferrer">Check it out on Steam.</a>
       </p>
@@ -325,6 +327,7 @@
   <div class="card-overlay">
     <div class="overlay-content">
       Live out your cyberpunk delivery boy fantasy. Something about pixel art and neon works really, really well, too.
+      <p><strong>Why I like it:</strong> </p>
       <p class="steam-link">
         <a href="https://store.steampowered.com/app/746850/Cloudpunk/" target="_blank" rel="noopener noreferrer">Check it out on Steam.</a>
       </p>
@@ -339,6 +342,7 @@
   <div class="card-overlay">
     <div class="overlay-content">
       We'd love to have a clickier take, but it really is as good as advertised. We'd also imagine you wouldn't be on this website without already having played this game.
+      <p><strong>Why I like it:</strong> </p>
       <p class="steam-link">
         <a href="https://store.steampowered.com/app/1091500/Cyberpunk_2077/" target="_blank" rel="noopener noreferrer">Check it out on Steam.</a>
       </p>
@@ -353,6 +357,7 @@
   <div class="card-overlay">
     <div class="overlay-content">
       Everyone knows Far Cry 3 was the best Far Cry, and the retro-futuristic '80s action parody dlc matches that speed.
+      <p><strong>Why I like it:</strong> </p>
       <p class="steam-link">
         <a href="https://store.steampowered.com/app/233270/Far_Cry_3_Blood_Dragon/" target="_blank" rel="noopener noreferrer">Check it out on Steam.</a>
       </p>
@@ -367,6 +372,7 @@
   <div class="card-overlay">
     <div class="overlay-content">
       Like the sword parts of cyberpunk? Play this game.
+      <p><strong>Why I like it:</strong> </p>
       <p class="steam-link">
         <a href="https://store.steampowered.com/app/1139900/Ghostrunner/" target="_blank" rel="noopener noreferrer">Check it out on Steam.</a>
       </p>
@@ -381,6 +387,7 @@
   <div class="card-overlay">
     <div class="overlay-content">
       A remake of the legendary N64 shooter that blended futuristic espionage with inventive weapons and cyberpunk style. Joanna Dark remains one of the genre’s most iconic protagonists.
+      <p><strong>Why I like it:</strong> </p>
       <p class="steam-link">
         <a href="https://www.xbox.com/en-US/games/store/perfect-dark/C0SWGV4560W1/0001" target="_blank" rel="noopener noreferrer">Check it out here.</a>
       </p>
@@ -395,6 +402,7 @@
   <div class="card-overlay">
     <div class="overlay-content">
       If you like cyberpunk stuff and you like top-down shooters, it's pretty can't miss. Don't overthink the story; it's guns + gritty setting.
+      <p><strong>Why I like it:</strong> </p>
       <p class="steam-link">
         <a href="https://store.steampowered.com/app/464060/RUINER/" target="_blank" rel="noopener noreferrer">Check it out on Steam.</a>
       </p>
@@ -409,6 +417,7 @@
   <div class="card-overlay">
     <div class="overlay-content">
       You like Hades? Great news: those folks made a cyberpunk game.
+      <p><strong>Why I like it:</strong> </p>
       <p class="steam-link">
         <a href="https://store.steampowered.com/app/237930/Transistor/" target="_blank" rel="noopener noreferrer">Check it out on Steam.</a>
       </p>
@@ -424,6 +433,7 @@
   <div class="card-overlay">
     <div class="overlay-content">
       A hardboiled cyberpunk noir where consciousness can be transferred between bodies. Brutal, fast-paced, and unforgettable.
+      <p><strong>Why I like it:</strong> </p>
       <br><br>
       <i>Please don't buy this on Amazon. Instead, find a local bookstore with a good sci-fi section.</i>
     </div>
@@ -437,6 +447,7 @@
   <div class="card-overlay">
     <div class="overlay-content">
       A dark manga epic set in an endless megastructure where humans fight for survival. Sparse dialogue, towering visuals, and pure atmosphere.
+      <p><strong>Why I like it:</strong> </p>
       <br><br>
       <i>Please don't buy this on Amazon. Instead, find a local bookstore with a good sci-fi section.</i>
     </div>
@@ -450,6 +461,7 @@
   <div class="card-overlay">
     <div class="overlay-content">
       A short story collection that cemented Gibson as cyberpunk’s voice. Includes the iconic title story and the first appearance of the word “cyberspace.”
+      <p><strong>Why I like it:</strong> </p>
       <br><br>
       <i>Please don't buy this on Amazon. Instead, find a local bookstore with a good sci-fi section.</i>
     </div>
@@ -463,6 +475,7 @@
   <div class="card-overlay">
     <div class="overlay-content">
       The second book in the Sprawl trilogy, weaving corporate intrigue and voodoo-like AI entities. Less famous than <i>Neuromancer</i> but equally sharp.
+      <p><strong>Why I like it:</strong> </p>
       <br><br>
       <i>Please don't buy this on Amazon. Instead, find a local bookstore with a good sci-fi section.</i>
     </div>
@@ -476,6 +489,7 @@
   <div class="card-overlay">
     <div class="overlay-content">
       An anthology that defined the cyberpunk movement.
+      <p><strong>Why I like it:</strong> </p>
       <br><br>
       <i>Please don't buy this on Amazon. Instead, find a local bookstore with a good sci-fi section.</i>
     </div>
@@ -489,6 +503,7 @@
   <div class="card-overlay">
     <div class="overlay-content">
       If you're here and you haven't read this yet, why? This is the one. Don't overthink it.
+      <p><strong>Why I like it:</strong> </p>
       <br><br>
       <i>Please don't buy this on Amazon. Instead, find a local bookstore with a good sci-fi section.</i>
     </div>
@@ -502,6 +517,7 @@
   <div class="card-overlay">
     <div class="overlay-content">
       A sweeping vision of posthuman evolution and political conflict in space. Sterling’s definitive statement on cyberpunk’s reach beyond Earth.
+      <p><strong>Why I like it:</strong> </p>
       <br><br>
       <i>Please don't buy this on Amazon. Instead, find a local bookstore with a good sci-fi section.</i>
     </div>
@@ -515,6 +531,7 @@
   <div class="card-overlay">
     <div class="overlay-content">
       A prescient look at digital identity and networked consciousness.
+      <p><strong>Why I like it:</strong> </p>
       <br><br>
       <i>Please don't buy this on Amazon. Instead, find a local bookstore with a good sci-fi section.</i>
     </div>
@@ -528,6 +545,7 @@
   <div class="card-overlay">
     <div class="overlay-content">
       A slick blend of futuristic biotech and classic detective noir. A murder mystery where genetic elites loom over the shadows of society.
+      <p><strong>Why I like it:</strong> </p>
       <br><br>
       <i>Please don't buy this on Amazon. Instead, find a local bookstore with a good sci-fi section.</i>
     </div>
@@ -542,6 +560,7 @@
   <div class="card-overlay">
     <div class="overlay-content">
       A stunning sequel that expands on the original’s questions of humanity, memory, and freedom. Visually breathtaking and haunting in tone.
+      <p><strong>Why I like it:</strong> </p>
     </div>
   </div>
 </div>
@@ -553,6 +572,7 @@
   <div class="card-overlay">
     <div class="overlay-content">
       An anime spinoff of Cyberpunk 2077 with heart and style.
+      <p><strong>Why I like it:</strong> </p>
     </div>
   </div>
 </div>
@@ -564,6 +584,7 @@
   <div class="card-overlay">
     <div class="overlay-content">
       A philosophical dive into cybernetic identity.
+      <p><strong>Why I like it:</strong> </p>
     </div>
   </div>
 </div>
@@ -575,6 +596,7 @@
   <div class="card-overlay">
     <div class="overlay-content">
       A landmark cyberpunk anime series blending action, politics, and deep dives into consciousness. Major Kusanagi leads Section 9 through tangled webs of tech and power.
+      <p><strong>Why I like it:</strong> </p>
     </div>
   </div>
 </div>
@@ -586,6 +608,7 @@
   <div class="card-overlay">
     <div class="overlay-content">
       A noir robot drama reimagining Astro Boy's greatest story arc.
+      <p><strong>Why I like it:</strong> </p>
     </div>
   </div>
 </div>
@@ -598,6 +621,7 @@
   <div class="card-overlay">
     <div class="overlay-content">
       A cyberpunk narrative art book blending visuals and lore.
+      <p><strong>Why I like it:</strong> </p>
     </div>
   </div>
 </div>
@@ -609,6 +633,7 @@
   <div class="card-overlay">
     <div class="overlay-content">
       A photographic journey through neon-soaked Tokyo nights. Wong’s work captures real-world cyberpunk energy in stunning, cinematic frames.
+      <p><strong>Why I like it:</strong> </p>
     </div>
   </div>
 </div>
