--- a/staffpicks.html
+++ b/staffpicks.html
@@ -434,8 +434,7 @@
     <div class="overlay-content">
       A hardboiled cyberpunk noir where consciousness can be transferred between bodies. Brutal, fast-paced, and unforgettable.
       <p><strong>Why I like it:</strong> </p>
-      <br><br>
-      <i>Please don't buy this on Amazon. Instead, find a local bookstore with a good sci-fi section.</i>
+      <p>Please don't buy this from an online megaretailer. Instead, buy it from an indie or neighborhood store with a good sci-fi section. If you see a version with a cool cover, snap a pic and send it to me at <a href="mailto:contact@burnlinemag.com">contact@burnlinemag.com</a>.</p>
     </div>
   </div>
 </div>
@@ -448,8 +447,7 @@
     <div class="overlay-content">
       A dark manga epic set in an endless megastructure where humans fight for survival. Sparse dialogue, towering visuals, and pure atmosphere.
       <p><strong>Why I like it:</strong> </p>
-      <br><br>
-      <i>Please don't buy this on Amazon. Instead, find a local bookstore with a good sci-fi section.</i>
+      <p>Please don't buy this from an online megaretailer. Instead, buy it from an indie or neighborhood store with a good sci-fi section. If you see a version with a cool cover, snap a pic and send it to me at <a href="mailto:contact@burnlinemag.com">contact@burnlinemag.com</a>.</p>
     </div>
   </div>
 </div>
@@ -462,8 +460,7 @@
     <div class="overlay-content">
       A short story collection that cemented Gibson as cyberpunk’s voice. Includes the iconic title story and the first appearance of the word “cyberspace.”
       <p><strong>Why I like it:</strong> </p>
-      <br><br>
-      <i>Please don't buy this on Amazon. Instead, find a local bookstore with a good sci-fi section.</i>
+      <p>Please don't buy this from an online megaretailer. Instead, buy it from an indie or neighborhood store with a good sci-fi section. If you see a version with a cool cover, snap a pic and send it to me at <a href="mailto:contact@burnlinemag.com">contact@burnlinemag.com</a>.</p>
     </div>
   </div>
 </div>
@@ -476,8 +473,7 @@
     <div class="overlay-content">
       The second book in the Sprawl trilogy, weaving corporate intrigue and voodoo-like AI entities. Less famous than <i>Neuromancer</i> but equally sharp.
       <p><strong>Why I like it:</strong> </p>
-      <br><br>
-      <i>Please don't buy this on Amazon. Instead, find a local bookstore with a good sci-fi section.</i>
+      <p>Please don't buy this from an online megaretailer. Instead, buy it from an indie or neighborhood store with a good sci-fi section. If you see a version with a cool cover, snap a pic and send it to me at <a href="mailto:contact@burnlinemag.com">contact@burnlinemag.com</a>.</p>
     </div>
   </div>
 </div>
@@ -490,8 +486,7 @@
     <div class="overlay-content">
       An anthology that defined the cyberpunk movement.
       <p><strong>Why I like it:</strong> </p>
-      <br><br>
-      <i>Please don't buy this on Amazon. Instead, find a local bookstore with a good sci-fi section.</i>
+      <p>Please don't buy this from an online megaretailer. Instead, buy it from an indie or neighborhood store with a good sci-fi section. If you see a version with a cool cover, snap a pic and send it to me at <a href="mailto:contact@burnlinemag.com">contact@burnlinemag.com</a>.</p>
     </div>
   </div>
 </div>
@@ -504,8 +499,7 @@
     <div class="overlay-content">
       If you're here and you haven't read this yet, why? This is the one. Don't overthink it.
       <p><strong>Why I like it:</strong> </p>
-      <br><br>
-      <i>Please don't buy this on Amazon. Instead, find a local bookstore with a good sci-fi section.</i>
+      <p>Please don't buy this from an online megaretailer. Instead, buy it from an indie or neighborhood store with a good sci-fi section. If you see a version with a cool cover, snap a pic and send it to me at <a href="mailto:contact@burnlinemag.com">contact@burnlinemag.com</a>.</p>
     </div>
   </div>
 </div>
@@ -518,8 +512,7 @@
     <div class="overlay-content">
       A sweeping vision of posthuman evolution and political conflict in space. Sterling’s definitive statement on cyberpunk’s reach beyond Earth.
       <p><strong>Why I like it:</strong> </p>
-      <br><br>
-      <i>Please don't buy this on Amazon. Instead, find a local bookstore with a good sci-fi section.</i>
+      <p>Please don't buy this from an online megaretailer. Instead, buy it from an indie or neighborhood store with a good sci-fi section. If you see a version with a cool cover, snap a pic and send it to me at <a href="mailto:contact@burnlinemag.com">contact@burnlinemag.com</a>.</p>
     </div>
   </div>
 </div>
@@ -532,8 +525,7 @@
     <div class="overlay-content">
       A prescient look at digital identity and networked consciousness.
       <p><strong>Why I like it:</strong> </p>
-      <br><br>
-      <i>Please don't buy this on Amazon. Instead, find a local bookstore with a good sci-fi section.</i>
+      <p>Please don't buy this from an online megaretailer. Instead, buy it from an indie or neighborhood store with a good sci-fi section. If you see a version with a cool cover, snap a pic and send it to me at <a href="mailto:contact@burnlinemag.com">contact@burnlinemag.com</a>.</p>
     </div>
   </div>
 </div>
@@ -546,8 +538,7 @@
     <div class="overlay-content">
       A slick blend of futuristic biotech and classic detective noir. A murder mystery where genetic elites loom over the shadows of society.
       <p><strong>Why I like it:</strong> </p>
-      <br><br>
-      <i>Please don't buy this on Amazon. Instead, find a local bookstore with a good sci-fi section.</i>
+      <p>Please don't buy this from an online megaretailer. Instead, buy it from an indie or neighborhood store with a good sci-fi section. If you see a version with a cool cover, snap a pic and send it to me at <a href="mailto:contact@burnlinemag.com">contact@burnlinemag.com</a>.</p>
     </div>
   </div>
 </div>
@@ -608,31 +599,6 @@
   <div class="card-overlay">
     <div class="overlay-content">
       A noir robot drama reimagining Astro Boy's greatest story arc.
-      <p><strong>Why I like it:</strong> </p>
-    </div>
-  </div>
-</div>
-
-<!-- Other -->
-<div class="story-card" data-category="other" tabindex="0" aria-label="Open details for Neon_Rising">
-  <img src="Neon Rising.png" alt="">
-  <h3>Neon_Rising</h3>
-  <small>The_Future_is_Now</small>
-  <div class="card-overlay">
-    <div class="overlay-content">
-      A cyberpunk narrative art book blending visuals and lore.
-      <p><strong>Why I like it:</strong> </p>
-    </div>
-  </div>
-</div>
-
-<div class="story-card" data-category="other" tabindex="0" aria-label="Open details for TO:KY:OO">
-  <img src="Tokyo.png" alt="">
-  <h3>TO:KY:OO</h3>
-  <small>Liam Wong</small>
-  <div class="card-overlay">
-    <div class="overlay-content">
-      A photographic journey through neon-soaked Tokyo nights. Wong’s work captures real-world cyberpunk energy in stunning, cinematic frames.
       <p><strong>Why I like it:</strong> </p>
     </div>
   </div>
@@ -814,3 +780,4 @@
   </script>
 </body>
 </html>
+
