--- a/staffpicks.html
+++ b/staffpicks.html
@@ -35,7 +35,7 @@
     .tabs { margin-top: 0.5rem; }
     .tablist {
       display: flex;
-      justify-content: center;  /* center the tabs */
+      justify-content: center;
       gap: 0.5rem;
       border-bottom: 1px solid var(--border-dark);
       margin-bottom: 1.75rem;
@@ -108,18 +108,18 @@
    /* Stack tabs on narrow screens */
 @media (max-width: 520px) {
   .tablist {
-    flex-direction: column;      /* stack */
+    flex-direction: column;
     align-items: stretch;
-    justify-content: flex-start; /* override center */
+    justify-content: flex-start;
     gap: 0.6rem;
-    border-bottom: 0;            /* no underline when vertical */
+    border-bottom: 0;
     padding-bottom: 0;
     overflow-x: visible;
   }
   .tab {
     width: 100%;
     text-align: center;
-    border-radius: 12px;         /* softer when full-width */
+    border-radius: 12px;
     padding: 0.7rem 1rem;
     font-size: 1rem;
   }
@@ -434,7 +434,7 @@
     <div class="overlay-content">
       A hardboiled cyberpunk noir where consciousness can be transferred between bodies. Brutal, fast-paced, and unforgettable.
       <p><strong>Why I like it:</strong> </p>
-      <p>Please don't buy this from an online megaretailer. Instead, buy it from an indie or neighborhood store with a good sci-fi section. If you see a version with a cool cover, snap a pic and send it to me at <a href="mailto:contact@burnlinemag.com">contact@burnlinemag.com</a>.</p>
+      <p><em>Please don't buy this from an online megaretailer. Instead, buy it from an indie or neighborhood store with a good sci-fi section.</em></p>
     </div>
   </div>
 </div>
@@ -447,7 +447,7 @@
     <div class="overlay-content">
       A dark manga epic set in an endless megastructure where humans fight for survival. Sparse dialogue, towering visuals, and pure atmosphere.
       <p><strong>Why I like it:</strong> </p>
-      <p>Please don't buy this from an online megaretailer. Instead, buy it from an indie or neighborhood store with a good sci-fi section. If you see a version with a cool cover, snap a pic and send it to me at <a href="mailto:contact@burnlinemag.com">contact@burnlinemag.com</a>.</p>
+      <p><em>Please don't buy this from an online megaretailer. Instead, buy it from an indie or neighborhood store with a good sci-fi section.</em></p>
     </div>
   </div>
 </div>
@@ -460,7 +460,7 @@
     <div class="overlay-content">
       A short story collection that cemented Gibson as cyberpunk’s voice. Includes the iconic title story and the first appearance of the word “cyberspace.”
       <p><strong>Why I like it:</strong> </p>
-      <p>Please don't buy this from an online megaretailer. Instead, buy it from an indie or neighborhood store with a good sci-fi section. If you see a version with a cool cover, snap a pic and send it to me at <a href="mailto:contact@burnlinemag.com">contact@burnlinemag.com</a>.</p>
+      <p><em>Please don't buy this from an online megaretailer. Instead, buy it from an indie or neighborhood store with a good sci-fi section.</em></p>
     </div>
   </div>
 </div>
@@ -473,7 +473,7 @@
     <div class="overlay-content">
       The second book in the Sprawl trilogy, weaving corporate intrigue and voodoo-like AI entities. Less famous than <i>Neuromancer</i> but equally sharp.
       <p><strong>Why I like it:</strong> </p>
-      <p>Please don't buy this from an online megaretailer. Instead, buy it from an indie or neighborhood store with a good sci-fi section. If you see a version with a cool cover, snap a pic and send it to me at <a href="mailto:contact@burnlinemag.com">contact@burnlinemag.com</a>.</p>
+      <p><em>Please don't buy this from an online megaretailer. Instead, buy it from an indie or neighborhood store with a good sci-fi section.</em></p>
     </div>
   </div>
 </div>
@@ -486,7 +486,7 @@
     <div class="overlay-content">
       An anthology that defined the cyberpunk movement.
       <p><strong>Why I like it:</strong> </p>
-      <p>Please don't buy this from an online megaretailer. Instead, buy it from an indie or neighborhood store with a good sci-fi section. If you see a version with a cool cover, snap a pic and send it to me at <a href="mailto:contact@burnlinemag.com">contact@burnlinemag.com</a>.</p>
+      <p><em>Please don't buy this from an online megaretailer. Instead, buy it from an indie or neighborhood store with a good sci-fi section.</em></p>
     </div>
   </div>
 </div>
@@ -499,7 +499,7 @@
     <div class="overlay-content">
       If you're here and you haven't read this yet, why? This is the one. Don't overthink it.
       <p><strong>Why I like it:</strong> </p>
-      <p>Please don't buy this from an online megaretailer. Instead, buy it from an indie or neighborhood store with a good sci-fi section. If you see a version with a cool cover, snap a pic and send it to me at <a href="mailto:contact@burnlinemag.com">contact@burnlinemag.com</a>.</p>
+      <p><em>Please don't buy this from an online megaretailer. Instead, buy it from an indie or neighborhood store with a good sci-fi section.</em></p>
     </div>
   </div>
 </div>
@@ -512,7 +512,7 @@
     <div class="overlay-content">
       A sweeping vision of posthuman evolution and political conflict in space. Sterling’s definitive statement on cyberpunk’s reach beyond Earth.
       <p><strong>Why I like it:</strong> </p>
-      <p>Please don't buy this from an online megaretailer. Instead, buy it from an indie or neighborhood store with a good sci-fi section. If you see a version with a cool cover, snap a pic and send it to me at <a href="mailto:contact@burnlinemag.com">contact@burnlinemag.com</a>.</p>
+      <p><em>Please don't buy this from an online megaretailer. Instead, buy it from an indie or neighborhood store with a good sci-fi section.</em></p>
     </div>
   </div>
 </div>
@@ -525,7 +525,7 @@
     <div class="overlay-content">
       A prescient look at digital identity and networked consciousness.
       <p><strong>Why I like it:</strong> </p>
-      <p>Please don't buy this from an online megaretailer. Instead, buy it from an indie or neighborhood store with a good sci-fi section. If you see a version with a cool cover, snap a pic and send it to me at <a href="mailto:contact@burnlinemag.com">contact@burnlinemag.com</a>.</p>
+      <p><em>Please don't buy this from an online megaretailer. Instead, buy it from an indie or neighborhood store with a good sci-fi section.</em></p>
     </div>
   </div>
 </div>
@@ -538,7 +538,7 @@
     <div class="overlay-content">
       A slick blend of futuristic biotech and classic detective noir. A murder mystery where genetic elites loom over the shadows of society.
       <p><strong>Why I like it:</strong> </p>
-      <p>Please don't buy this from an online megaretailer. Instead, buy it from an indie or neighborhood store with a good sci-fi section. If you see a version with a cool cover, snap a pic and send it to me at <a href="mailto:contact@burnlinemag.com">contact@burnlinemag.com</a>.</p>
+      <p><em>Please don't buy this from an online megaretailer. Instead, buy it from an indie or neighborhood store with a good sci-fi section.</em></p>
     </div>
   </div>
 </div>
@@ -780,4 +780,3 @@
   </script>
 </body>
 </html>
-
