--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
   <section class="hero">
     <div class="hero-inner wrap">
       <a href="#latest-issue" onclick="openFlipbook(event)">
-        <img src="Burnline Issue 02.png" alt="Latest issue cover" />
+        <img src="Template Cover.png" alt="Latest issue cover" />
       </a>
 
       <div class="hero-text" style="flex: 1; max-width: 700px; display: flex; flex-direction: column;">
@@ -380,6 +380,7 @@
 </script>
 </body>
 </html>
+
 
 
 
