--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
       <div class="grid-inner">
         <a href="fiction.html" class="card-link">
           <div class="card">
-            <img src="Card IMG.png" alt="Featured Stories image">
+            <img src="Ruiner Cover.jpg" alt="Featured Stories image">
             <h3>Issue Library</h3>
           </div>
         </a>
@@ -294,7 +294,7 @@
     <div class="footer-container">
       <div class="footer-column">
         <img src="Flame logo-1.png.png" alt="Burnline Logo" class="footer-logo">
-        <p>Get issue updates from Burnline straight to your inbox. No spam or anything, I promise.</p>
+        <p>Get issue updates from Burnline straight to your inbox. No spam or anything, we promise.</p>
         <form style="margin-top: 1rem;">
           <input type="email" placeholder="Email Address" class="newsletter-input"><br>
           <button type="submit" class="newsletter-button">Subscribe</button>
@@ -380,6 +380,7 @@
 </script>
 </body>
 </html>
+
 
 
 
