--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
         </a>
         <a href="staffpicks.html" class="card-link">
           <div class="card">
-            <img src="1000xResist.png" alt="Staff Picks image">
+            <img src="1000xResist-Key-Art.jpg" alt="Staff Picks image">
             <h3>Staff Picks</h3>
           </div>
         </a>
@@ -380,6 +380,7 @@
 </script>
 </body>
 </html>
+
 
 
 
