--- a/stories.html
+++ b/stories.html
@@ -179,7 +179,7 @@
 
         <a href="#" class="card-link story-card">
           <div class="card">
-            <img src="CS2 Keyart.jpg" alt="Story artwork" loading="lazy">
+            <img src="Cyberpunk Girl.png" alt="Story artwork" loading="lazy">
             <h3>[Story Title]</h3>
             <p class="story-excerpt">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus sodales leo nec erat elementum.</p>
             <div class="story-meta">by [Author's Name] • 11 min read</div>
@@ -221,7 +221,7 @@
 
         <a href="#" class="card-link story-card is-hidden">
           <div class="card">
-            <img src="CS2 Keyart.jpg" alt="Story artwork" loading="lazy">
+            <img src="Cyberpunk Girl.png" alt="Story artwork" loading="lazy">
             <h3>[Story Title]</h3>
             <p class="story-excerpt">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque nec sapien quis justo congue.</p>
             <div class="story-meta">by [Author's Name] • 9 min read</div>
@@ -246,7 +246,7 @@
     <div class="footer-container">
       <div class="footer-column">
         <img src="Flame logo-1.png.png" alt="Burnline Logo" class="footer-logo">
-        <p>Get issue updates from Burnline straight to your inbox. No spam or anything, I promise.</p>
+        <p>Get issue updates from Burnline straight to your inbox. No spam or anything, we promise.</p>
         <form style="margin-top: 1rem;">
           <input type="email" placeholder="Email Address" class="newsletter-input"><br>
           <button type="submit" class="newsletter-button">Subscribe</button>
