--- a/stories.html
+++ b/stories.html
@@ -194,7 +194,7 @@
         <!-- Everything from the 4th card onward starts hidden -->
         <a href="#" class="card-link story-card is-hidden">
           <div class="card">
-            <img src="Burnline Issue 01.png" alt="Story artwork" loading="lazy">
+            <img src="Cyberpunk Guy.png" alt="Story artwork" loading="lazy">
             <h3>[Story Title]</h3>
             <p class="story-excerpt">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed facilisis tortor non justo ultricies.</p>
             <div class="story-meta">by [Author's Name] • 8 min read</div>
@@ -230,7 +230,7 @@
 
         <a href="#" class="card-link story-card is-hidden">
           <div class="card">
-            <img src="Burnline Issue 01.png" alt="Story artwork" loading="lazy">
+            <img src="Cyberpunk Guy.png" alt="Story artwork" loading="lazy">
             <h3>[Story Title]</h3>
             <p class="story-excerpt">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur a mi sit amet mi dapibus.</p>
             <div class="story-meta">by [Author's Name] • 12 min read</div>
