--- a/art.html
+++ b/art.html
@@ -223,7 +223,7 @@
       <h2 class="gradient-heading-blue" style="text-align:left;">Cover Gallery</h2>
       <div class="cover-grid">
         <div class="cover-tile" data-title="Burnline — Issue 01" data-artist="Burnline Editorial">
-          <img src="Burnline Issue 02.png" alt="Burnline Issue 01 cover">
+          <img src="Template Cover.png" alt="Burnline Issue 01 cover">
         </div>
       </div>
     </div>
