--- a/submit.html
+++ b/submit.html
@@ -179,7 +179,10 @@
           </tr>
           <tr>
             <td>How to Submit</td>
-            <td>Email your story as a .doc, .docx, or .pdf to <a href="mailto:contact@burnlinemag.com" style="color: var(--cyan);">contact@burnlinemag.com</a>. Please include the word <strong>"Submission"</strong> in the subject line.</td>
+<td>Email your story as a .doc, .docx, or .pdf to
+  <a href="mailto:contact@burnlinemag.com">contact@burnlinemag.com</a>.
+  Please include the word <strong>"Submission"</strong> in the subject line.
+</td>
           </tr>
         </table>
 
@@ -203,7 +206,10 @@
           </tr>
           <tr>
             <td>How to Submit</td>
-            <td>Email <a href="mailto:contact@burnlinemag.com" style="color: var(--cyan);">contact@burnlinemag.com</a> with a link to your artwork wherever it's hosted (online portfolio, Reddit post, etc.). Please include the word <strong>"Submission"</strong> in the subject line.</td>
+<td>Email <a href="mailto:contact@burnlinemag.com">contact@burnlinemag.com</a>
+  with a link to your artwork wherever it's hosted (online portfolio, Reddit post, etc.).
+  Please include the word <strong>"Submission"</strong> in the subject line.
+</td>
           </tr>
         </table>
 
