--- a/stories/template.html
+++ b/stories/template.html
@@ -18,7 +18,7 @@
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600&family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
 
-  <!-- Global styles (NOTE the ../) -->
+  <!-- Global styles -->
   <link rel="stylesheet" href="../css/style.css" />
 
   <!-- Page-specific minimal styles; relies on your global variables -->
@@ -79,28 +79,22 @@
   <a class="skip-link" href="#main">Skip to content</a>
   <div class="read-progress" id="readProgress"></div>
 
-  <!-- ===== Global Header / Nav (paths fixed with ../) ===== -->
+  <!-- ===== Header / Nav / Logo — matches other pages (About) ===== -->
   <header class="site-header">
-    <div class="header-inner">
-      <a class="brand" href="../index.html" aria-label="Burnline Home">
-        <img src="../img/burnline-mark.svg" alt="" width="28" height="28" />
-        <span>Burnline</span>
-      </a>
-
-      <nav class="site-nav" aria-label="Primary">
-        <button class="nav-toggle" aria-expanded="false" aria-controls="navMenu" aria-label="Menu">
-          <span class="bar"></span><span class="bar"></span><span class="bar"></span>
-        </button>
-        <ul id="navMenu">
-          <li><a href="../index.html#latest">Latest</a></li>
-          <li><a href="../fiction.html">Fiction</a></li>
-          <li><a href="../art.html">Art</a></li>
-          <li><a href="../staff-picks.html">Staff Picks</a></li>
-          <li><a href="../submit.html">Submit</a></li>
-          <li><a href="../about.html">About</a></li>
-        </ul>
-      </nav>
+    <a href="../index.html" class="logo-title">
+      <img src="../Flame logo-1.png.png" alt="Burnline logo">
+      <span>BURNLINE</span>
+    </a>
+    <div class="hamburger" onclick="toggleMenu()">
+      <div></div><div></div><div></div>
     </div>
+    <nav class="site-nav" id="site-nav">
+      <a href="../fiction.html">Issues</a>
+      <a href="../stories.html">Stories</a>
+      <a href="../art.html">Art</a>
+      <a href="../about.html">About</a>
+      <a href="../submit.html">Submit</a>
+    </nav>
   </header>
 
   <!-- ===== Page Hero ===== -->
@@ -209,19 +203,13 @@
     </div>
   </footer>
 
-  <!-- ===== Tiny JS: nav toggle, progress, read time, sharing ===== -->
+  <!-- ===== Tiny JS: progress, read time, sharing + hamburger toggle ===== -->
   <script>
-    // Mobile nav toggle (fallback if your global JS isn't loaded here)
-    (function(){
-      const btn=document.querySelector('.nav-toggle');
-      const menu=document.getElementById('navMenu');
-      if(!btn||!menu) return;
-      btn.addEventListener('click',()=>{
-        const exp=btn.getAttribute('aria-expanded')==='true';
-        btn.setAttribute('aria-expanded',String(!exp));
-        menu.classList.toggle('open');
-      });
-    })();
+    // Matches your About page: toggles 'active' on #site-nav
+    function toggleMenu() {
+      const nav = document.getElementById('site-nav');
+      if (nav) nav.classList.toggle('active');
+    }
 
     // Reading progress bar
     (function(){
