--- a/stories/template.html
+++ b/stories/template.html
@@ -118,7 +118,7 @@
       </div>
 
       <figure class="story-figure">
-        <img src="../img/placeholder-story-illustration.jpg" alt="[Describe the illustration briefly]" loading="lazy" decoding="async" />
+        <img src="AL Cover.png" alt="[Describe the illustration briefly]" loading="lazy" decoding="async" />
         <figcaption>Illustration by [Illustrator Name].</figcaption>
       </figure>
     </div>
