--- a/stories/template.html
+++ b/stories/template.html
@@ -118,7 +118,8 @@
       </div>
 
       <figure class="story-figure">
-        <img src="AL Cover.png" alt="[Describe the illustration briefly]" loading="lazy" decoding="async" />
+<meta property="og:image" content="../AL Cover.png" />
+<img src="../AL Cover.png" alt="[Describe the illustration briefly]" loading="lazy" decoding="async" />
         <figcaption>Illustration by [Illustrator Name].</figcaption>
       </figure>
     </div>
