--- a/stories/template.html
+++ b/stories/template.html
@@ -166,8 +166,8 @@
         <!-- Tags and Share buttons intentionally removed -->
 
         <div class="prev-next">
-          <a class="btn" href="../stories/previous-story.html">← Previous: [Previous Story]</a>
-          <a class="btn" href="../stories/next-story.html">Next: [Next Story] →</a>
+          <a class="btn" href="../stories/previous-story.html">← Previous story</a>
+          <a class="btn" href="../stories/next-story.html">Next story →</a>
         </div>
       </article>
 
@@ -181,7 +181,7 @@
 
         <section class="card newsletter-card">
           <h4>Get the Latest</h4>
-          <p>New stories, art, and issues—straight to your inbox.</p>
+          <p>New issue updates straight to your inbox.</p>
           <form action="#" method="post" aria-label="Newsletter signup">
             <label for="nl-email" class="visually-hidden">Email</label>
             <input id="nl-email" name="email" type="email" placeholder="you@domain.com" required style="width:100%;padding:.6rem;border-radius:10px;border:1px solid var(--border-dark);background:var(--ink-dark);color:var(--text);" />
