--- a/stories.html
+++ b/stories.html
@@ -159,7 +159,7 @@
       <div class="grid-inner">
 
         <!-- First row: 3 visible cards -->
-        <a href="#" class="card-link story-card">
+        <a href="https://bowliopia.github.io/burnline/stories/story-1.html" class="card-link story-card">
           <div class="card">
             <img src="AL Cover.png" alt="Story artwork" loading="lazy">
             <h3>[Story Title]</h3>
@@ -168,7 +168,7 @@
           </div>
         </a>
 
-        <a href="#" class="card-link story-card">
+        <a href="https://bowliopia.github.io/burnline/stories/story-2.html" class="card-link story-card">
           <div class="card">
             <img src="NM Art.png" alt="Story artwork" loading="lazy">
             <h3>[Story Title]</h3>
@@ -177,7 +177,7 @@
           </div>
         </a>
 
-        <a href="#" class="card-link story-card">
+        <a href="https://bowliopia.github.io/burnline/stories/story-3.html" class="card-link story-card">
           <div class="card">
             <img src="Cyberpunk Girl.png" alt="Story artwork" loading="lazy">
             <h3>[Story Title]</h3>
@@ -192,7 +192,7 @@
         </div>
 
         <!-- Everything from the 4th card onward starts hidden -->
-        <a href="#" class="card-link story-card is-hidden">
+        <a href="https://bowliopia.github.io/burnline/stories/story-4.html" class="card-link story-card is-hidden">
           <div class="card">
             <img src="Cyberpunk Guy.png" alt="Story artwork" loading="lazy">
             <h3>[Story Title]</h3>
@@ -201,7 +201,7 @@
           </div>
         </a>
 
-        <a href="#" class="card-link story-card is-hidden">
+        <a href="https://bowliopia.github.io/burnline/stories/story-5.html" class="card-link story-card is-hidden">
           <div class="card">
             <img src="AL Cover.png" alt="Story artwork" loading="lazy">
             <h3>[Story Title]</h3>
@@ -210,7 +210,7 @@
           </div>
         </a>
 
-        <a href="#" class="card-link story-card is-hidden">
+        <a href="https://bowliopia.github.io/burnline/stories/story-6.html" class="card-link story-card is-hidden">
           <div class="card">
             <img src="NM Art.png" alt="Story artwork" loading="lazy">
             <h3>[Story Title]</h3>
@@ -219,7 +219,7 @@
           </div>
         </a>
 
-        <a href="#" class="card-link story-card is-hidden">
+        <a href="https://bowliopia.github.io/burnline/stories/story-7.html" class="card-link story-card is-hidden">
           <div class="card">
             <img src="Cyberpunk Girl.png" alt="Story artwork" loading="lazy">
             <h3>[Story Title]</h3>
@@ -228,7 +228,7 @@
           </div>
         </a>
 
-        <a href="#" class="card-link story-card is-hidden">
+        <a href="https://bowliopia.github.io/burnline/stories/story-8.html" class="card-link story-card is-hidden">
           <div class="card">
             <img src="Cyberpunk Guy.png" alt="Story artwork" loading="lazy">
             <h3>[Story Title]</h3>
