--- a/stories/template.html
+++ b/stories/template.html
@@ -19,9 +19,7 @@
 
     .page-hero{padding:5rem 1rem 2rem;background:linear-gradient(135deg,var(--bg-deep-1),var(--bg-hero-2));border-bottom:1px solid var(--border-dark)}
     .hero-inner{max-width:1100px;margin:0 auto}
-    /* Mobile first: stack text then image */
     .hero-row{display:flex;flex-direction:column;gap:1.5rem;align-items:flex-start}
-    /* Desktop: row with art left and text right */
     @media (min-width:960px){
       .hero-row{flex-direction:row}
       .hero-row .story-figure{order:-1;flex:0 0 420px;max-width:420px;margin:0}
@@ -89,13 +87,13 @@
     }
     .newsletter-card button{ width:100%; max-width:340px; }
 
-    /* Make the author CTA match Subscribe button size/centering */
+    /* Smaller author button so it doesn't span the entire card */
     .author-card .btn{
-      display:block;
-      width:100%;
-      max-width:340px;
-      margin-top:.6rem;
-      margin-inline:auto;
+      display:inline-flex;          /* shrink-to-fit the label */
+      width:auto;                   /* no full-width */
+      max-width:none;
+      padding:.55rem 1rem;          /* slightly slimmer than default */
+      margin:.6rem auto 0;          /* keep it centered in the card */
     }
   </style>
 
@@ -119,7 +117,6 @@
 </head>
 <body>
 
-  <!-- ===== Header / Nav / Logo — matches other pages (About) ===== -->
   <header class="site-header">
     <a href="../index.html" class="logo-title">
       <img src="../Flame logo-1.png.png" alt="Burnline logo">
@@ -137,7 +134,6 @@
     </nav>
   </header>
 
-  <!-- ===== Page Hero (art left on desktop, text first on mobile) ===== -->
   <section class="page-hero" role="banner">
     <div class="hero-inner hero-row">
       <div class="hero-text">
@@ -166,10 +162,8 @@
     </div>
   </section>
 
-  <!-- ===== Main Content ===== -->
   <main id="main" class="story" role="main">
     <div class="story-inner">
-      <!-- Story body -->
       <article class="story-body" data-count-words>
         <p class="dropcap">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque vitae libero sit amet lacus gravida feugiat. Integer vitae efficitur quam. Cras nec risus ut magna imperdiet luctus sit amet at neque.</p>
         <p>Quisque in feugiat nunc, vitae hendrerit magna. Sed vehicula diam nec magna suscipit, sed condimentum tortor cursus. Nunc iaculis dolor vitae lectus posuere, non euismod justo tristique.</p>
@@ -188,12 +182,10 @@
 
       </article>
 
-      <!-- Right rail -->
       <aside class="story-aside" aria-label="About the author and newsletter">
         <section class="card author-card">
           <h4>About the Author</h4>
           <p><strong>[Author Name]</strong> is a placeholder bio. Two to three sentences, linking to a personal site or more Burnline stories.</p>
-          <!-- CHANGED: gradient link -> button; removed arrow -->
           <a class="btn" href="../author/[author-slug].html">More from this author</a>
         </section>
 
@@ -209,7 +201,6 @@
     </div>
   </main>
 
-  <!-- ===== Footer (matches About page exactly; logo path adjusted) ===== -->
   <footer>
     <div class="footer-container">
       <div class="footer-column">
@@ -236,7 +227,6 @@
     </div>
   </footer>
 
-  <!-- ===== Tiny JS: progress, read time + hamburger toggle ===== -->
   <script>
     function toggleMenu() {
       const nav = document.getElementById('site-nav');
