--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
   </div>
 
   <nav class="site-nav" id="site-nav">
-    <a href="fiction.html">Issues</a>
+    <a href="issues.html">Issues</a>
     <a href="stories.html">Stories</a>
     <a href="art.html">Art</a>
     <a href="about.html">About</a>
@@ -268,7 +268,7 @@
   <section class="grid" id="features">
     <div class="wrap">
       <div class="grid-inner">
-        <a href="fiction.html" class="card-link">
+        <a href="issues.html" class="card-link">
           <div class="card">
             <img src="Ruiner Cover.jpg" alt="Featured Stories image">
             <h3>Issue Library</h3>
@@ -306,7 +306,7 @@
       </div>
       <div class="footer-column">
         <h4>Read</h4>
-        <p><a href="https://bowliopia.github.io/burnline/fiction.html">Issue Library</a></p>
+        <p><a href="https://bowliopia.github.io/burnline/issues.html">Issue Library</a></p>
         <p><a href="https://bowliopia.github.io/burnline/stories.html">Featured Stories</a></p>
         <p><a href="https://bowliopia.github.io/burnline/staffpicks.html">Staff Picks</a></p>
       </div>
@@ -380,6 +380,7 @@
 </script>
 </body>
 </html>
+
 
 
 
