--- a/art.html
+++ b/art.html
@@ -269,6 +269,7 @@
     </div>
   </div>
 
+ <!-- Footer -->
   <footer>
     <div class="footer-container">
       <div class="footer-column">
@@ -285,7 +286,7 @@
       </div>
       <div class="footer-column">
         <h4>Read</h4>
-        <p><a href="https://bowliopia.github.io/burnline/fiction.html">Issue Library</a></p>
+        <p><a href="https://bowliopia.github.io/burnline/issues.html">Issue Library</a></p>
         <p><a href="https://bowliopia.github.io/burnline/stories.html">Featured Stories</a></p>
         <p><a href="https://bowliopia.github.io/burnline/staffpicks.html">Staff Picks</a></p>
       </div>
